updating host and adding https scheme for server
